# Midterm1

./: .gitignore  CONTRIBUTORS.md  NEXT_STEPS.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.sh
experiments/: audit_report.txt  config_ee2adfcaf1b0d84a.json  monitoring_report.txt  pathological_cases.json  summary_report.txt
experiments/governance_logs/: predictions_20260129_182613.jsonl  predictions_20260204_224221.jsonl  predictions_20260204_224403.jsonl  predictions_20260205_002339.jsonl
models/: credit_model.pkl
paper/: midterm1.tex  midterm2.tex
src/: __init__.py  train.py
src/data/: __init__.py  data_loader.py
src/explainability/: __init__.py  shap_explainer.py
src/fairness/: __init__.py  fairness_metrics.py
src/governance/: __init__.py  monitoring.py
src/models/: __init__.py  baseline_benchmarks.py  credit_model.py
src/robustness/: __init__.py  robustness_tests.py
src/utils/: plotting.py  reproducibility.py
