[project]
name = "credit-risk-xai"
version = "1.0.0"
description = "Explainable credit risk scoring system with SHAP"
authors = [
    {name = "Santiago Arista Viramontes", email = "santiago.arista@example.com"},
    {name = "Diego Vergara Hernández", email = "diego.vergara@example.com"},
    {name = "José Leobardo Navarro Márquez", email = "jose.navarro@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "shap>=0.43.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "tqdm>=4.65.0",
    "imbalanced-learn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
